surfacedeform_bind(modifier="Surface Deform") - context incorrect #50830

Closed
opened 2017-03-01 20:30:13 +01:00 by Jose Conseco · 5 comments

While testing new 'Surface Deform' modifier (daily build) I noticed it can't be bind to target by python command:
bpy.ops.object.surfacedeform_bind(modifier="Surface Deform")

It gives error - context incorrect

But very similar command for 'Mesh Deform' modifier works ok:
bpy.ops.object.meshdeform_bind(modifier="MeshDeform")

I think it is bug since both modifiers are similar, but one python command fails with incorrect context.

BindProblem.blend - sample file with 2 objects, and python bind commad fail for 'Surface Deform' modifier.

While testing new 'Surface Deform' modifier (daily build) I noticed it can't be bind to target by python command: bpy.ops.object.surfacedeform_bind(modifier="Surface Deform") It gives error - context incorrect But very similar command for 'Mesh Deform' modifier works ok: bpy.ops.object.meshdeform_bind(modifier="MeshDeform") I think it is bug since both modifiers are similar, but one python command fails with incorrect context. [BindProblem.blend](https://archive.blender.org/developer/F499630/BindProblem.blend) - sample file with 2 objects, and python bind commad fail for 'Surface Deform' modifier.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JoseConseco

Added subscriber: @JoseConseco
Member

Added subscriber: @LucaRood-3

Added subscriber: @LucaRood-3

This issue was referenced by 856077618a

This issue was referenced by 856077618a9dfe33a6fb25c86effdfd2b3098419
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50830
No description provided.